// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard With Horizontal ProgressIndicator 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className=""
      >
        <div
          className="iot--page-wizard--progress--horizontal"
        >
          <ul
            className="bx--progress iot--progress-indicator"
            onChange={[Function]}
          >
            <li
              className="bx--progress-step bx--progress-step--current"
            >
              <button
                className="bx--progress-step-button bx--progress-step-button--unclickable"
                onKeyDown={[Function]}
                tabIndex={-1}
              >
                <span
                  className="bx--assistive-text"
                >
                  Current
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="16"
                    cy="16"
                    r="10"
                  />
                  <path
                    d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 1
                </p>
                <p
                  className="bx--progress-optional"
                >
                  Optional label
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
            <li
              className="bx--progress-step bx--progress-step--incomplete"
            >
              <button
                className="bx--progress-step-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <span
                  className="bx--assistive-text"
                >
                  Incomplete
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 2
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
            <li
              className="bx--progress-step bx--progress-step--incomplete"
            >
              <button
                className="bx--progress-step-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <span
                  className="bx--assistive-text"
                >
                  Incomplete
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 3
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
          </ul>
        </div>
        <div
          className="iot--page-wizard--content"
        >
          <div
            className="iot--page-wizard--step"
            id="step1"
          >
            <div
              className="iot--page-wizard--step--title"
            >
              Step 1: Define the data
            </div>
            <div
              className="iot--page-wizard--step--description"
            >
              You can create summaries lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est.
               
              <a
                href="www.ibm.com"
              >
                An embedded link
              </a>
               is good to have sometimes.
            </div>
            <div
              className="iot--page-wizard--step--content"
            >
              <h1>
                A table could go here
              </h1>
              <h3>
                Some other form items could go here
              </h3>
              <h4>
                And other things here
              </h4>
            </div>
            <div
              className="iot--page-wizard--step--extra-content"
            >
              <h4>
                What are time grains?
              </h4>
              <p>
                Time grains are lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est. Duis blandit tellus ultricies justo sagittis, tempus ornare purus tristique. Quisque nisi tortor, semper ac efficitur tincidunt, feugiat vel ligula. Aenean consequat, massa nec rhoncus vulputate, metus ex dictum ante, at posuere erat tellus vitae orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu tempus sem. Vestibulum quis consequat orci. Sed vel ultrices libero, eu malesuada quam.
              </p>
            </div>
            <div
              className="iot--page-wizard--content--actions"
            >
              <button
                className="iot--btn bx--btn bx--btn--secondary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                className="iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard With Sticky Footer: stateful example w/ validation in PageTitleBar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something Else
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  A cool PageWizard!
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    aria-label="More information"
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="page-title-bar-content"
        >
          <div
            className="iot--page-wizard iot--page-wizard__sticky"
          >
            <div
              className="iot--page-wizard--progress--vertical"
            >
              <ul
                className="bx--progress bx--progress--vertical iot--progress-indicator"
                onChange={[Function]}
              >
                <li
                  className="bx--progress-step bx--progress-step--current"
                >
                  <button
                    className="bx--progress-step-button bx--progress-step-button--unclickable"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Current
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="16"
                        r="10"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step with validation
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
                <li
                  className="bx--progress-step bx--progress-step--incomplete"
                >
                  <button
                    className="bx--progress-step-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Incomplete
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step 2
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
              </ul>
            </div>
            <div
              className="iot--page-wizard--content"
            >
              <div
                className="iot--page-wizard--step"
                id="step1"
              >
                <div
                  className="iot--page-wizard--step--title"
                >
                  Enter some things
                </div>
                <div
                  className="iot--page-wizard--step--description"
                >
                  Make sure you do not try to go to the next step with an empty input! Bad things will happen.
                </div>
                <div
                  className="iot--page-wizard--step--content"
                >
                  <form
                    className="bx--form"
                  >
                     
                    <fieldset
                      className="bx--fieldset"
                    >
                      <legend
                        className="bx--label"
                      >
                        Name
                      </legend>
                      <div
                        className="bx--form-item"
                      >
                        <div
                          className="bx--form-item bx--text-input-wrapper"
                        >
                          <label
                            className="bx--label"
                            htmlFor="first-name"
                          >
                            First name
                          </label>
                          <div
                            className="bx--text-input__field-wrapper"
                            data-invalid={null}
                          >
                            <input
                              className="bx--text-input bx--text__input"
                              data-testid="first-name"
                              disabled={false}
                              id="first-name"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        className="bx--form-item"
                      >
                        <div
                          className="bx--form-item bx--text-input-wrapper"
                        >
                          <label
                            className="bx--label"
                            htmlFor="last-name"
                          >
                            Last name
                          </label>
                          <div
                            className="bx--text-input__field-wrapper"
                            data-invalid={null}
                          >
                            <input
                              className="bx--text-input bx--text__input"
                              data-testid="last-name"
                              disabled={false}
                              id="last-name"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </fieldset>
                     
                  </form>
                </div>
                <div
                  className="iot--page-wizard--content--actions--sticky"
                >
                  <button
                    className="iot--btn bx--btn bx--btn--secondary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    className="iot--btn bx--btn bx--btn--primary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Next
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard With additional footer content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something Else
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  A cool PageWizard!
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    aria-label="More information"
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="page-title-bar-content"
        >
          <div
            className="iot--page-wizard iot--page-wizard__sticky"
          >
            <div
              className="iot--page-wizard--progress--vertical"
            >
              <ul
                className="bx--progress bx--progress--vertical iot--progress-indicator"
                onChange={[Function]}
              >
                <li
                  className="bx--progress-step bx--progress-step--current"
                >
                  <button
                    className="bx--progress-step-button bx--progress-step-button--unclickable"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Current
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="16"
                        r="10"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step with validation
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
                <li
                  className="bx--progress-step bx--progress-step--incomplete"
                >
                  <button
                    className="bx--progress-step-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Incomplete
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step 2
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
              </ul>
            </div>
            <div
              className="iot--page-wizard--content"
            >
              <div
                className="iot--page-wizard--step"
                id="step1"
              >
                <div
                  className="iot--page-wizard--step--title"
                >
                  Enter some things
                </div>
                <div
                  className="iot--page-wizard--step--description"
                >
                  Make sure you do not try to go to the next step with an empty input! Bad things will happen.
                </div>
                <div
                  className="iot--page-wizard--step--content"
                >
                  <form
                    className="bx--form"
                  >
                     
                    <fieldset
                      className="bx--fieldset"
                    >
                      <legend
                        className="bx--label"
                      >
                        Name
                      </legend>
                      <div
                        className="bx--form-item"
                      >
                        <div
                          className="bx--form-item bx--text-input-wrapper"
                        >
                          <label
                            className="bx--label"
                            htmlFor="first-name"
                          >
                            First name
                          </label>
                          <div
                            className="bx--text-input__field-wrapper"
                            data-invalid={null}
                          >
                            <input
                              className="bx--text-input bx--text__input"
                              data-testid="first-name"
                              disabled={false}
                              id="first-name"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        className="bx--form-item"
                      >
                        <div
                          className="bx--form-item bx--text-input-wrapper"
                        >
                          <label
                            className="bx--label"
                            htmlFor="last-name"
                          >
                            Last name
                          </label>
                          <div
                            className="bx--text-input__field-wrapper"
                            data-invalid={null}
                          >
                            <input
                              className="bx--text-input bx--text__input"
                              data-testid="last-name"
                              disabled={false}
                              id="last-name"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </fieldset>
                     
                  </form>
                </div>
                <div
                  className="iot--page-wizard--content--actions--sticky"
                >
                  <button
                    className="bx--btn bx--btn--tertiary"
                    disabled={false}
                    tabIndex={0}
                    type="button"
                  >
                    Save and close
                  </button>
                  <button
                    className="iot--btn bx--btn bx--btn--secondary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    className="iot--btn bx--btn bx--btn--primary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Next
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard only one step, in PageTitleBar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something Else
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  A cool PageWizard!
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    aria-label="More information"
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="page-title-bar-content"
        >
          <div
            className="iot--page-wizard"
          >
            <div
              className="iot--page-wizard--content"
            >
              <div
                className="iot--page-wizard--step"
                id="step1"
              >
                <div
                  className="iot--page-wizard--step--title"
                >
                  Step 1: Define the data
                </div>
                <div
                  className="iot--page-wizard--step--description"
                >
                  You can create summaries lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est.
                   
                  <a
                    href="www.ibm.com"
                  >
                    An embedded link
                  </a>
                   is good to have sometimes.
                </div>
                <div
                  className="iot--page-wizard--step--content"
                >
                  <h1>
                    A table could go here
                  </h1>
                  <h3>
                    Some other form items could go here
                  </h3>
                  <h4>
                    And other things here
                  </h4>
                </div>
                <div
                  className="iot--page-wizard--step--extra-content"
                >
                  <h4>
                    What are time grains?
                  </h4>
                  <p>
                    Time grains are lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est. Duis blandit tellus ultricies justo sagittis, tempus ornare purus tristique. Quisque nisi tortor, semper ac efficitur tincidunt, feugiat vel ligula. Aenean consequat, massa nec rhoncus vulputate, metus ex dictum ante, at posuere erat tellus vitae orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu tempus sem. Vestibulum quis consequat orci. Sed vel ultrices libero, eu malesuada quam.
                  </p>
                </div>
                <div
                  className="iot--page-wizard--content--actions"
                >
                  <button
                    className="iot--btn bx--btn bx--btn--secondary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    className="iot--btn bx--btn bx--btn--primary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Submit
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard stateful example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="iot--page-wizard"
      >
        <div
          className="iot--page-wizard--progress--vertical"
        >
          <ul
            className="bx--progress bx--progress--vertical iot--progress-indicator"
            onChange={[Function]}
          >
            <li
              className="bx--progress-step bx--progress-step--current"
            >
              <button
                className="bx--progress-step-button bx--progress-step-button--unclickable"
                onKeyDown={[Function]}
                tabIndex={-1}
              >
                <span
                  className="bx--assistive-text"
                >
                  Current
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="16"
                    cy="16"
                    r="10"
                  />
                  <path
                    d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 1
                </p>
                <p
                  className="bx--progress-optional"
                >
                  Optional label
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
            <li
              className="bx--progress-step bx--progress-step--incomplete"
            >
              <button
                className="bx--progress-step-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <span
                  className="bx--assistive-text"
                >
                  Incomplete
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 2
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
            <li
              className="bx--progress-step bx--progress-step--incomplete"
            >
              <button
                className="bx--progress-step-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <span
                  className="bx--assistive-text"
                >
                  Incomplete
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 3
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
          </ul>
        </div>
        <div
          className="iot--page-wizard--content"
        >
          <div
            className="iot--page-wizard--step"
            id="step1"
          >
            <div
              className="iot--page-wizard--step--title"
            >
              Step 1: Define the data
            </div>
            <div
              className="iot--page-wizard--step--description"
            >
              You can create summaries lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est.
               
              <a
                href="www.ibm.com"
              >
                An embedded link
              </a>
               is good to have sometimes.
            </div>
            <div
              className="iot--page-wizard--step--content"
            >
              <h1>
                A table could go here
              </h1>
              <h3>
                Some other form items could go here
              </h3>
              <h4>
                And other things here
              </h4>
            </div>
            <div
              className="iot--page-wizard--step--extra-content"
            >
              <h4>
                What are time grains?
              </h4>
              <p>
                Time grains are lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est. Duis blandit tellus ultricies justo sagittis, tempus ornare purus tristique. Quisque nisi tortor, semper ac efficitur tincidunt, feugiat vel ligula. Aenean consequat, massa nec rhoncus vulputate, metus ex dictum ante, at posuere erat tellus vitae orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu tempus sem. Vestibulum quis consequat orci. Sed vel ultrices libero, eu malesuada quam.
              </p>
            </div>
            <div
              className="iot--page-wizard--content--actions"
            >
              <button
                className="iot--btn bx--btn bx--btn--secondary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                className="iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard stateful example w/ validation in PageTitleBar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something Else
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  A cool PageWizard!
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    aria-label="More information"
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="page-title-bar-content"
        >
          <div
            className="iot--page-wizard"
          >
            <div
              className="iot--page-wizard--progress--vertical"
            >
              <ul
                className="bx--progress bx--progress--vertical iot--progress-indicator"
                onChange={[Function]}
              >
                <li
                  className="bx--progress-step bx--progress-step--current"
                >
                  <button
                    className="bx--progress-step-button bx--progress-step-button--unclickable"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Current
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="16"
                        r="10"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step with validation
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
                <li
                  className="bx--progress-step bx--progress-step--incomplete"
                >
                  <button
                    className="bx--progress-step-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Incomplete
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step 2
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
              </ul>
            </div>
            <div
              className="iot--page-wizard--content"
            >
              <div
                className="iot--page-wizard--step"
                id="step1"
              >
                <div
                  className="iot--page-wizard--step--title"
                >
                  Enter some things
                </div>
                <div
                  className="iot--page-wizard--step--description"
                >
                  Make sure you do not try to go to the next step with an empty input! Bad things will happen.
                </div>
                <div
                  className="iot--page-wizard--step--content"
                >
                  <form
                    className="bx--form"
                  >
                     
                    <fieldset
                      className="bx--fieldset"
                    >
                      <legend
                        className="bx--label"
                      >
                        Name
                      </legend>
                      <div
                        className="bx--form-item"
                      >
                        <div
                          className="bx--form-item bx--text-input-wrapper"
                        >
                          <label
                            className="bx--label"
                            htmlFor="first-name"
                          >
                            First name
                          </label>
                          <div
                            className="bx--text-input__field-wrapper"
                            data-invalid={null}
                          >
                            <input
                              className="bx--text-input bx--text__input"
                              data-testid="first-name"
                              disabled={false}
                              id="first-name"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        className="bx--form-item"
                      >
                        <div
                          className="bx--form-item bx--text-input-wrapper"
                        >
                          <label
                            className="bx--label"
                            htmlFor="last-name"
                          >
                            Last name
                          </label>
                          <div
                            className="bx--text-input__field-wrapper"
                            data-invalid={null}
                          >
                            <input
                              className="bx--text-input bx--text__input"
                              data-testid="last-name"
                              disabled={false}
                              id="last-name"
                              onChange={[Function]}
                              onClick={[Function]}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </fieldset>
                     
                  </form>
                </div>
                <div
                  className="iot--page-wizard--content--actions"
                >
                  <button
                    className="iot--btn bx--btn bx--btn--secondary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    className="iot--btn bx--btn bx--btn--primary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Next
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard w/ i18n 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="iot--page-wizard"
      >
        <div
          className="iot--page-wizard--progress--vertical"
        >
          <ul
            className="bx--progress bx--progress--vertical iot--progress-indicator"
            onChange={[Function]}
          >
            <li
              className="bx--progress-step bx--progress-step--current"
            >
              <button
                className="bx--progress-step-button bx--progress-step-button--unclickable"
                onKeyDown={[Function]}
                tabIndex={-1}
              >
                <span
                  className="bx--assistive-text"
                >
                  Current
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="16"
                    cy="16"
                    r="10"
                  />
                  <path
                    d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 1
                </p>
                <p
                  className="bx--progress-optional"
                >
                  Optional label
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
            <li
              className="bx--progress-step bx--progress-step--incomplete"
            >
              <button
                className="bx--progress-step-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <span
                  className="bx--assistive-text"
                >
                  Incomplete
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 2
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
            <li
              className="bx--progress-step bx--progress-step--incomplete"
            >
              <button
                className="bx--progress-step-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <span
                  className="bx--assistive-text"
                >
                  Incomplete
                </span>
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                  />
                  <title />
                </svg>
                <p
                  className="bx--progress-label"
                >
                  Step 3
                </p>
                <span
                  className="bx--progress-line"
                />
              </button>
            </li>
          </ul>
        </div>
        <div
          className="iot--page-wizard--content"
        >
          <div
            className="iot--page-wizard--step"
            id="step1"
          >
            <div
              className="iot--page-wizard--step--title"
            >
              Step 1: Define the data
            </div>
            <div
              className="iot--page-wizard--step--description"
            >
              You can create summaries lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est.
               
              <a
                href="www.ibm.com"
              >
                An embedded link
              </a>
               is good to have sometimes.
            </div>
            <div
              className="iot--page-wizard--step--content"
            >
              <h1>
                A table could go here
              </h1>
              <h3>
                Some other form items could go here
              </h3>
              <h4>
                And other things here
              </h4>
            </div>
            <div
              className="iot--page-wizard--step--extra-content"
            >
              <h4>
                What are time grains?
              </h4>
              <p>
                Time grains are lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est. Duis blandit tellus ultricies justo sagittis, tempus ornare purus tristique. Quisque nisi tortor, semper ac efficitur tincidunt, feugiat vel ligula. Aenean consequat, massa nec rhoncus vulputate, metus ex dictum ante, at posuere erat tellus vitae orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu tempus sem. Vestibulum quis consequat orci. Sed vel ultrices libero, eu malesuada quam.
              </p>
            </div>
            <div
              className="iot--page-wizard--content--actions"
            >
              <button
                className="iot--btn bx--btn bx--btn--secondary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                className="iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Next
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/PageWizard wrapped in PageTitleBar 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="page-title-bar"
      >
        <div
          className="page-title-bar-header"
        >
          <div>
            <div
              className="page-title-bar-breadcrumb"
            >
              <nav
                aria-label="Breadcrumb"
              >
                <ol
                  className="bx--breadcrumb"
                >
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Home
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something
                    </a>
                  </li>
                  <li
                    className="bx--breadcrumb-item"
                  >
                    <a
                      className="bx--link bx--link"
                      to="www.ibm.com"
                    >
                      Something Else
                    </a>
                  </li>
                </ol>
              </nav>
            </div>
            <div
              className="page-title-bar-title"
            >
              <div
                className="page-title-bar-title--text"
              >
                <h2>
                  A cool PageWizard!
                </h2>
                <div
                  className="bx--tooltip__label"
                  id="tooltip"
                >
                  
                  <div
                    aria-describedby={null}
                    aria-label="More information"
                    className="bx--tooltip__trigger"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      description={null}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      role={null}
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="page-title-bar-content"
        >
          <div
            className="iot--page-wizard"
          >
            <div
              className="iot--page-wizard--progress--vertical"
            >
              <ul
                className="bx--progress bx--progress--vertical iot--progress-indicator"
                onChange={[Function]}
              >
                <li
                  className="bx--progress-step bx--progress-step--current"
                >
                  <button
                    className="bx--progress-step-button bx--progress-step-button--unclickable"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Current
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="16"
                        r="10"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step 1
                    </p>
                    <p
                      className="bx--progress-optional"
                    >
                      Optional label
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
                <li
                  className="bx--progress-step bx--progress-step--incomplete"
                >
                  <button
                    className="bx--progress-step-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Incomplete
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step 2
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
                <li
                  className="bx--progress-step bx--progress-step--incomplete"
                >
                  <button
                    className="bx--progress-step-button"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--assistive-text"
                    >
                      Incomplete
                    </span>
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <title />
                    </svg>
                    <p
                      className="bx--progress-label"
                    >
                      Step 3
                    </p>
                    <span
                      className="bx--progress-line"
                    />
                  </button>
                </li>
              </ul>
            </div>
            <div
              className="iot--page-wizard--content"
            >
              <div
                className="iot--page-wizard--step"
                id="step1"
              >
                <div
                  className="iot--page-wizard--step--title"
                >
                  Step 1: Define the data
                </div>
                <div
                  className="iot--page-wizard--step--description"
                >
                  You can create summaries lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est.
                   
                  <a
                    href="www.ibm.com"
                  >
                    An embedded link
                  </a>
                   is good to have sometimes.
                </div>
                <div
                  className="iot--page-wizard--step--content"
                >
                  <h1>
                    A table could go here
                  </h1>
                  <h3>
                    Some other form items could go here
                  </h3>
                  <h4>
                    And other things here
                  </h4>
                </div>
                <div
                  className="iot--page-wizard--step--extra-content"
                >
                  <h4>
                    What are time grains?
                  </h4>
                  <p>
                    Time grains are lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros odio, rhoncus et sapien quis, vestibulum bibendum est. Duis blandit tellus ultricies justo sagittis, tempus ornare purus tristique. Quisque nisi tortor, semper ac efficitur tincidunt, feugiat vel ligula. Aenean consequat, massa nec rhoncus vulputate, metus ex dictum ante, at posuere erat tellus vitae orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu tempus sem. Vestibulum quis consequat orci. Sed vel ultrices libero, eu malesuada quam.
                  </p>
                </div>
                <div
                  className="iot--page-wizard--content--actions"
                >
                  <button
                    className="iot--btn bx--btn bx--btn--secondary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    className="iot--btn bx--btn bx--btn--primary"
                    disabled={false}
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    Next
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
